recursion.hanoi.lessons.recursion.hanoi.SplitHanoi2.scala.error
SplitHanoi2:10: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src dst2
      ^SplitHanoi2:11: error: not found: value hanoi
      hanoi (n - 1) dst1 src dst2
      ^SplitHanoi2:12: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src dst1
      ^SplitHanoi2:13: error: not found: value hanoi
      hanoi (n - 1) other src dst1
      ^